# obsidian-nlm-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
src/obsidian_nlm_cli/: cli.py  db.py  frontmatter.py  nlm.py  sync.py  utils.py
