[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-nlm-cli"
version = "0.1.0"
description = "One-way Obsidian vault → Google NotebookLM sync CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "yanxuwang" }]
keywords = ["obsidian", "notebooklm", "sync", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
dependencies = ["notebooklm-mcp-cli>=0.5.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[project.scripts]
obsidian-nlm = "obsidian_nlm_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 120
